@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFile {
    String name, path
    + String getPath()
    + {abstract} String getStringTreeFolder()
    + {abstract} AbstractFile addFile(AbstractFile f)
    + {abstract} void removeFile(AbstractFile f)
}

class Folder {

}

class File {

}

Folder *---> "*" AbstractFile: files

AbstractFile <|-- File
AbstractFile <|-- Folder


@enduml